# BnB

./: CMakeLists.txt  README.md  aicontroller.cpp  aicontroller.h  boom.cpp  boom.h  effect.cpp  effect.h  gamemap.cpp  gamemap.h  hitable.cpp  introduce.cpp  introduce.h  mainwindow.cpp  mainwindow.h  physics.cpp  physics.h  player.cpp  player.h  prop.cpp  prop.h  scoreboard.cpp  scoreboard.h  stater.cpp  stater.h  stoper.cpp  stoper.h  usercontroller.cpp  usercontroller.h  wall.cpp  wall.h
framework/: gameobject.cpp  gameobject.h  gamescene.h
image/: 0.png - 快捷方式.lnk  res.qrc
